--- a/app/index.html
+++ b/app/index.html
@@ -45,12 +45,15 @@
 
     <!-- build:js scripts/plugins.js -->
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="scripts/lib/chosen.jquery.js"></script>
+    <script src="scripts/lib/jquery.icheck.js"></script>
     <!-- endbuild -->
 
     <!-- build:js scripts/modules.js -->
     <script src="bower_components/angular-resource/angular-resource.js"></script>
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
+    <script src="bower_components/angular-translate/angular-translate.js"></script>
     <!-- endbuild -->
 
     <!-- build:js({.tmp,app}) scripts/scripts.js -->
