--- a/app/index.html
+++ b/app/index.html
@@ -53,6 +53,7 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-translate/angular-translate.js"></script>
+    <script src="bower_components/Angular-localStorage/src/localStorage.js"></script>
     <script src="bower_components/angular-ui-select2/src/select2.js"></script>
     <!-- endbuild -->
 
