--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,7 @@
 
     <!-- build:js scripts/plugins.js -->
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+    <script src="scripts/lib/mite.js"></script>
     <!-- endbuild -->
 
     <!-- build:js scripts/modules.js -->
