--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
       m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
       })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-      ga('create', 'UA-25326096-3', 'timesheets.io');
+      ga('create', 'UA-XXXXX-X', 'domain.com');
       ga('set', 'anonymizeIp', true);
       ga('send', 'pageview');
     </script>
