--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="container" ng-view="main">Test</div>
+    <div class="container" ng-view="main"></div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
     <script>
